Fixed image display in week 4

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -176,7 +176,7 @@
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1 text-center">
                             <h2 class="section-title">Week 4</h2> <!-- begin week 4 summary -->
-                            <h4 class="section-title">Creativity in Coding!</h4>
+                            <h4 class="section-title">Time to Review!</h4>
                         </div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
                         <div class="col-md-12" align="middle">
-                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/yellow_cohort_drawing.png" height="350">
+                            <img class="shadow-lg" src="assets/img/ss22photos/week4/yellow_cohort_drawing.png" height="350">
                         </div>
                     </div>
                     <br>
@@ -279,12 +279,12 @@
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
                         <div class="col-md-6" align="middle">
-                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/helen_work.png" height="350">
+                            <img class="shadow-lg" src="assets/img/ss22photos/week4/helen_work.png" height="350">
                             <br><br>
                             <p><i>Helen A.</i></p>
                         </div>
                         <div class="col-md-6" align="middle">
-                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/week4/zyphera_work.png" height="350">
+                            <img class="shadow-lg" src="assets/img/ss22photos/week4/zyphera_work.png" height="350">
                             <br><br>
                             <p><i>Zyphera K.</i></p>
                         </div>
@@ -315,7 +315,7 @@
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
                         <div class="col-md-12" align="middle">
-                            <img class="shadow-lg" src="/Users/annaclark/Desktop/msu-cse-outreach.github.io/spartangwc/assets/img/ss22photos/team/trinity750x1000_72R.jpg" height="350">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/trinity750x1000_72R.jpg" height="350">
                             <br><br>
                             <p><i>Trinity Johnson</i></p>
                         </div>
