fixed ted talk link to be embedded

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -260,7 +260,7 @@
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
                         <div class="col-md-12" align="middle">
-                            <iframe allowfullscreen width="400" height="350" src="https://youtu.be/UG_X_7g63rY"></iframe>
+                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/UG_X_7g63rY"></iframe>
                         </div>
                     </div>
                     <br>
