news letter week 5

--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -87,6 +87,12 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/17OAwifnEn1ItIULt0YlaFiH0oVVOlws7lYxPzqDZ9Y0/edit?usp=sharing" target="_blank">09 - Variables, Input, Parameters - 2.8.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1NTN60yD97_OyFpFTKIoa72GNiYOvRMhUWAzbzysanew/edit?usp=sharing" target="_blank">10 - Variables, Input, Parameters Review - 2.12.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1MCgF_9px_y-zEpZmuEhsdZrPJM9cl8bPXBefbw2ygZo/edit?usp=sharing" target="_blank">11 - Kahoot and Final Project Brainstorm - 2.15.22</a>
+									</li>
 								</ul>
 							</section>
 
