week 5 newsletter done

--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -73,7 +73,7 @@
 										We made it through our fifth week, and are quite close to the end of our seven-week program! We'd like to thank and congratulate our students for their energy and enthusiasm; our students' parents for their ongoing support and encouragement; our mentors for making each Tuesday and Saturday exciting, engaging, and entertaining; and our advisors for their organization, coordination and commitment to making this a reality. Without you all, we wouldn't be here.
 									</p>
 									<p>
-										By now, you've made it through all of the new content we'll be covering in our seven-week program! You've made it through the basic commands, through loops and functions, and now through variables, inputs, and parameters. These are major foundations of all programming and we're so proud of the progress you've made! Keep up the amazing work.
+										By now, we've made it through all of the new content we'll be covering in our seven-week program! We've made it through the basic commands, through loops and functions, and now through variables, inputs, and parameters. These are major foundations of all programming and we're so proud of the progress you've made! Keep up the amazing work.
 
 									</p>
 									<p>
@@ -87,7 +87,7 @@
 										<p>
 											Join us at this week's Bonus Hour on
 											<b>Thursday, 17 February from 6-7pm Belize Time (BZT),</b> open to all MSU x Pathlight Belize Coding Club students.
-											At least two student mentors will be available on zoom during the bonus hour&mdash;this is a great opportunity for 1:1 discussion and support!
+											At least two student mentors will be available on Zoom during the bonus hour&mdash;this is a great opportunity for 1:1 discussion and support!
 											<ul>
 												<li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/98274965748">https://msu.zoom.us/j/96070110748</a> (password: see email)</li>
 											</ul>
@@ -133,13 +133,10 @@
 									</p>
 									<span class="image main"><img src="images/news_4news/2022-02-08 (3).png" alt="Photo Jacinta Gomez Live Spotlight!"></span>
 									<p>
-										One of our icebreakers from last week encouraged students to make their own <b>Digital Audio from Art</b> using tools built on machine learning. Kudos to the students for their creativity!
+										One of our icebreakers from last week encouraged students to make their own <b>Digital Audio from Art</b> using tools built on machine learning. We had a lot of fun using <a href="https://artsandculture.google.com/incognito/experiment/blob-opera/AAHWrq360NcGbw?cp=eyJyIjoiWW1UQnYxd2ZrTkt1In0">blob opera</a>, <a href="https://musiclab.chromeexperiments.com/Song-Maker/">song maker</a>, <a href="https://artsandculture.google.com/incognito/experiment/YAGuJyDB-XbbWg?cp=eyJhdG1vc3BoZXJlIjoidW5kZXJ3YXRlciJ9">paint with music</a> and <a href="https://experiments.withgoogle.com/ai/ai-duet/view/">dueting</a>. Ask your student to show you how they used these tools!
 									</p>
 									<p>
-										AI Machine learning tools are pretty neat! We had a lot of fun using <a href="https://artsandculture.google.com/incognito/experiment/blob-opera/AAHWrq360NcGbw?cp=eyJyIjoiWW1UQnYxd2ZrTkt1In0">blob opera</a>, <a href="https://musiclab.chromeexperiments.com/Song-Maker/">song maker</a>, <a href="https://artsandculture.google.com/incognito/experiment/YAGuJyDB-XbbWg?cp=eyJhdG1vc3BoZXJlIjoidW5kZXJ3YXRlciJ9">paint with music</a> and <a href="https://experiments.withgoogle.com/ai/ai-duet/view/">dueting</a>. Ask your student to show you how they used these tools!
-									</p>
-									<p>
-										The students definitely created some jams, and we all took turns listening to student-produced beats! Here are some of those hits: <a href="https://musiclab.chromeexperiments.com/Song-Maker/song/6447301081432064">created with song maker</a> and <a href="https://artsandculture.google.com/incognito/experiment/blob-opera/AAHWrq360NcGbw?hl=en&cp=eyJyIjoic2l4U01KSHEzSlh5In0">created with blob opera</a>!
+										The students definitely created some jams, and we all took turns listening to student-produced beats! Here are some of those hits: <a href="https://musiclab.chromeexperiments.com/Song-Maker/song/6447301081432064">created with song maker</a> and <a href="https://artsandculture.google.com/incognito/experiment/blob-opera/AAHWrq360NcGbw?hl=en&cp=eyJyIjoic2l4U01KSHEzSlh5In0">created with blob opera</a>! Kudos to the students for their creativity!
 									</p>
 
 									<div align="middle" class="col-md-12">
