fix spelling of PathLight

--- a/belizeweb/clubs.html
+++ b/belizeweb/clubs.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Clubs - MSU x Pathlight Belize Coding Club</title>
+		<title>Clubs - MSU x PathLight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x Pathlight Coding Clubs Logo" /></span><span class="title">MSU x Pathlight Coding Clubs</span>
+									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,7 +51,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>SS22 MSU x Pathlight Cohorts</h1>
+							<h1>SS22 MSU x PathLight Cohorts</h1>
 							<span class="image main"><img src="images/bigblueholewallpaperbetter.com1152x326r72.jpg" alt="" /></span>
 							<p>Check back after January 15 for information specific to your cohort.</p>
 
@@ -125,7 +125,7 @@
 											<ul>
 													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
 													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
 											</ul>
 									</div>
 
