--- a/belizeweb/supporters.html
+++ b/belizeweb/supporters.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sponsors &amp; Supporters - MSU x Pathlight Belize Coding Club</title>
+		<title>Sponsors &amp; Supporters - MSU x PathLight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x Pathlight Coding Clubs Logo" /></span><span class="title">MSU x Pathlight Coding Clubs</span>
+									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
 								</a>
 
 							<!-- Nav -->
@@ -56,7 +56,7 @@
 							<p>
 								We gratefully acknowledge the financial support, guidance, and active participation of our sponsors and supporters.
 								Their generocity permits us to provide a fun, CIT-rich learning experience for Belizean secondary-school students in which to increase their knowledge of computing, build their confidence, improve their teamwork and communication skills, and connect with mentors.
-								Participation in a MSU x Pathlight Coding Club can be a life changing experience!
+								Participation in a MSU x PathLight Coding Club can be a life changing experience!
 							</p>
 
 							<p>
@@ -79,7 +79,7 @@
 											</td>
 											<td>
 												<a href="https://pathlight.org/" target="_blank">
-													Pathlight International
+													PathLight International
 												</a>
 											</td>
 											<td>
@@ -175,10 +175,10 @@
 									Gifts to MSU are tax deductible to the extent permitted by law.
 								</p>
 								<p><em>
-									Please forward a copy of the receipt to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x Pathlight Coding Clubs Program.
+									Please forward a copy of the receipt to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x PathLight Coding Clubs Program.
 								</em></p>
 								<p>
-									If you prefer to mail your gift, please include your credit card number, expiration date, the name under which the card is issued, and the program (MSU x Pathlight - CSE) on your <a href="https://www.egr.msu.edu/sites/default/files/pledgeform.pdf" target="_blank">gift pledge form (.pdf)</a>.
+									If you prefer to mail your gift, please include your credit card number, expiration date, the name under which the card is issued, and the program (MSU x PathLight - CSE) on your <a href="https://www.egr.msu.edu/sites/default/files/pledgeform.pdf" target="_blank">gift pledge form (.pdf)</a>.
 								</p>
 								<p>
 									Pledge forms should be mailed to:
@@ -267,7 +267,7 @@
 											<ul>
 													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
 													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
 											</ul>
 									</div>
 
