--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Team - MSU x Pathlight Belize Coding Club</title>
+		<title>Team - MSU x PathLight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x Pathlight Coding Clubs Logo" /></span><span class="title">MSU x Pathlight Coding Clubs</span>
+									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
 								</a>
 
 							<!-- Nav -->
@@ -171,12 +171,12 @@
 
 
 										<!-- Advisors -->
-										<div class="col-12"><span><center><h2>MSU &amp; Pathlight Advisers</h2><center></span></div>
+										<div class="col-12"><span><center><h2>MSU &amp; PathLight Advisers</h2><center></span></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey750x1000.jpeg" alt="Photo of Consuelo" /></span>
 											<center>
 												<h3>Consuelo</h3>
-												Director of Teacher Training<br>Pathlight International<br>Belize
+												Director of Teacher Training<br>PathLight International<br>Belize
 											</center>
 										</div>
 
@@ -277,7 +277,7 @@
 											<ul>
 													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
 													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
 											</ul>
 									</div>
 
