--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Resources - MSU x Pathlight Belize Coding Club</title>
+		<title>Resources - MSU x PathLight Belize Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x Pathlight Coding Clubs Logo" /></span><span class="title">MSU x Pathlight Coding Clubs</span>
+									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
 								</a>
 
 							<!-- Nav -->
@@ -231,7 +231,7 @@
 											<ul>
 													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
 													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="Pathlight International">Pathlight International</a></li>
+													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
 											</ul>
 									</div>
 
