add time for bonus hour

--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -157,7 +157,7 @@
 										Saturdays 10a &mdash; 11:30a and Tuesdays 4p &mdash; 5:30p (Belize Time).
 									</li>
 									<li>
-										An optional Bonus Hour is offered weekly. Time TBD.
+										An optional Bonus Hour is offered weekly. Thursdays 5 pm (Belize Time).
 									</li>
 									<li>
 										To receive a Certificate of Completion, <italic> participants must attend at least 10 of the 12 scheduled meetings
