update donation information

--- a/belizeweb/supporters.html
+++ b/belizeweb/supporters.html
@@ -167,16 +167,20 @@
 
 								<h2 id="donate">How to donate</h2>
 								<p>
-									You may charge your gift using the University Development Online Gift Cart: <a href="https://www.givingto.msu.edu/gift/index.cfm" target="_blank">https://www.givingto.msu.edu/gift/index.cfm</a>.
-									Type <em>Department of Computer Science and Engineering</em> into the search box and select it.
-									Enter the amount and select <em>Proceed to Checkout</em>.
-									After submitting your credit card information and approving payment, you will receive a receipt by email.
-									Save this receipt for your tax records.
-									Gifts to MSU are tax deductible to the extent permitted by law.
+									You may charge your tax-deductible gift using the University Development Online Gift Cart: <a href="https://www.givingto.msu.edu/gift/index.cfm" target="_blank">https://www.givingto.msu.edu/gift/index.cfm</a>.
 								</p>
-								<p><em>
-									Please forward a copy of the receipt to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x PathLight Coding Clubs Program.
-								</em></p>
+								<ol>
+									<li>Type <em>Department of Computer Science and Engineering</em> into the search box and select it.</li>
+									<li>Enter the amount and select <em>Proceed to Checkout</em>.</li>
+									<li>After submitting your credit card information and approving payment, you will receive a receipt by email.
+									    Save this receipt for your tax records.
+										  (Gifts to MSU are tax deductible to the extent permitted by law.)</li>
+									<li>
+										<em>
+											Forward a copy of the receipt to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x PathLight Coding Clubs Program.
+										</em>
+									</li>
+								</ol>
 								<p>
 									If you prefer to mail your gift, please include your credit card number, expiration date, the name under which the card is issued, and the program (MSU x PathLight - CSE) on your <a href="https://www.egr.msu.edu/sites/default/files/pledgeform.pdf" target="_blank">gift pledge form (.pdf)</a>.
 								</p>
