--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -93,6 +93,12 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/1MCgF_9px_y-zEpZmuEhsdZrPJM9cl8bPXBefbw2ygZo/edit?usp=sharing" target="_blank">11 - Kahoot and Final Project Brainstorm - 2.15.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/17ABBP-U2GisvkyDjUKFPWI97SIu4vCGpx1CbFzAuEI0/edit?usp=sharing" target="_blank">12 - Final Project Day 1 - 2.19.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1Ib30p3xIVexk4kKeBImDdXgiBCjGofnU1fuxZcQKm4g/edit?usp=sharing" target="_blank">13 - Final Project Day 2 - 2.22.22</a>
+									</li>
 								</ul>
 							</section>
 
