--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -169,6 +169,263 @@
                     </div> <!--/.container -->
                 </section>
         <!-- end news section -->
+        
+        <section id="week5" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 5</h2> <!-- begin week 4 summary -->
+                            <h4 class="section-title">Lists, Rows, and Tables, oh my!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were so excited to see all of your students’ enthusiasm as we wrapped up Week 5 of our Spring 2022 Spartan 
+                    Girls Who Code Program! This week, we learned about how to create lists and tables in HTML! 
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Bonus Hour</h4>
+                    <p>
+                        This week's Bonus Hour will take place Thursday, 2/24 from 7:00-8:00p ET and is open to all SGWC participants. 
+                        SGWC mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the 
+                        coding concepts we've learned, or talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour will always be the same as the password from the
+                        previous Saturday's meeting (sent via email only).
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                    </ul>
+                    <h4>2. Feedback</h4>
+                    <p>
+                        Us mentors are paying attention! This past week, we have left feedback for each one of our students. 
+                        If you would like to see it, you can find that in CodeHS under one of your assignments! 
+                        The assignment button will be colored pink or dark blue. 
+                    </p>
+                    <h4>3. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                        <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                        Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                        Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                        or recommendations!
+                    </p>
+                    <h4>4. Looking Ahead</h4>
+                    <p>
+                        We'll see you again this Saturday, 2/26 at 10a ET for our fifth SGWC meeting of the spring, where we will be learning about lists and tables in HTML!
+                    </p>
+                    <h4>5. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    To start off this week, we did an icebreaker where students shared some of their favorite traditions!
+                </p>
+                <p>
+                    After our ice breaker, we went directly to our spotlight, where our students learned about Katherine Johnson, 
+                    a mathematician at NASA who helped to land people on the moon.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <iframe allowfullscreen width="400" height="350" src="https://www.youtube.com/embed/E4j_LpKzcZQ"></iframe>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Watch this interesting video on Katherine Johnson’s experiences at NASA</i></p>
+                    </div>
+                </div>
+                <p>
+                    Once our students finished sharing their thoughts on Katherine’s experiences on being one of the first female NASA scientists 
+                    and how it affects our lives today, we jumped right into a review of the content we have learned so far!
+                </p>
+                <p>
+                    After that, our students continued working on their exercises in <a href = "https://codehs.com/">CodeHS</a>, 
+                    where they learned how to insert lists and tables into their websites. Below you can see some of the amazing 
+                    websites our students have created! 
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/week5/HHwork.png" height= auto width = "550">
+                            <br><br>
+                            <p><i>Helisa H.</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <br>
+                            <img class="shadow-lg" src="assets/img/ss22photos/week5/JAwork.png" height=auto width = "550">
+                            <br><br>
+                            <p><i>Jiahe A.</i></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>Two students showing off their favorite things in our "Table of Favorites" exercise!</i></p>
+                    </div>
+                </div>
+                <p>
+                    We ended things with small mentor-student group discussions, reflecting on what went well, what was challenging, 
+                    and what students are looking forward to at next Saturday's session. 
+                    Responses to our weekly feedback survey were again quite positive, but don't hesitate to reach out to info@spartangwc.org 
+                    if you have any questions or concerns!
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    Continuing our mentor spotlight series, we are highlighting our Black Cohort Mentors this week!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/ChristinaTagayHeadshot750_1000.jpg" height="350">
+                            <br><br>
+                            <p><i>Christina Tagay</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/Lisa_Lipin_headshot750_1000.jpg" height="350">
+                            <br><br>
+                            <p><i>Elizabeth Lipin</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/luzalvarezheadshot750_1000.jpg" height="350">
+                            <br><br>
+                            <p><i>Luz Alvarez</i></p>
+                        </div>
+                        <div class="col-md-3" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss22photos/team/ayokunleOsofisan750x1000r72.jpeg" height="350">
+                            <br><br>
+                            <p><i>Ayo Osofisan</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-3" align="middle"> <!-- Christina -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a second-year majoring in computer science and minoring in business!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I became interested in computer science when I took my first coding class in high school. 
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I coded Solitaire for a class project.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope to code my own game in the future.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Don’t be afraid to ask for help! 
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Elizabeth -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a first-year double majoring in computer science and psychology and minoring in Quantitative Data Analytics!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I have several computer scientists in my family so I took some classes at MSU at their urging and loved it!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I created a tower defense game where players try to pop balloons.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I'm hoping to work on creating artificial intelligence.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Start by coding what you love and don't be afraid to try new things!! 
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Luz -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a first-year majoring in mechanical engineering!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I was involved in a summer program that included java script, and I was amazed how I create something with a program!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I was able to gather specific data from a website that collected covid-19 cases around the world.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I am looking forward to hopefully implement it in my future courses and career!
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Even in the worse of times, keep your head held up high and don't give up! 
+                            </p>
+                        </div>
+                        <div class="col-md-3" align="middle"> <!-- Ayo -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year double majoring in biosystems engineering and zoology with a concentration in marine biology!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I first became interested in coding when I joined a robotics team my first year of high school and learned to program the robot to drive.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I 3D printed a brain and programmed it to light up the different parts of the brain.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I hope to use coding to build a website for my future marine conservation program.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Learning to code is a long process, so have fun with it and don’t take your mistakes too seriously. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Looking forward to seeing everyone again this Saturday! :)
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+                </div>
+            </section> <!-- end week 5 summary -->
 
         <section id="week4" class="news bg-white">
             <div class="container">
